cabal-version:       2.4
name:                caching-reverse-proxy
version:             0.2.0.0
synopsis:            A caching reverse proxy
description:         A caching reverse proxy.
license:             Apache-2.0
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          Tristan de Cacqueray <tdecacqu@redhat.com>
copyright:           2021 Red Hat
category:            System
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

common common-options
  build-depends:       base                       < 5
                     , http-reverse-proxy         < 0.7.0
                     , relude                     > 1.0.0.0

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     CachingReverseProxy

executable caching-reverse-proxy
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       caching-reverse-proxy
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
