cabal-version:       2.4
name:                caching-reverse-proxy
version:             0.2.0.0
synopsis:            A caching reverse proxy
description:
    caching-reverse-proxy is a library to cache remote API responses.
    .
    Use this CLI to proxy a remote API.
    .
license:             Apache-2.0
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          Tristan de Cacqueray <tdecacqu@redhat.com>
copyright:           2021 Red Hat
category:            System
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.4

source-repository head
  type:                git
  location:            https://github.com/softwarefactory-project/caching-reverse-proxy.git

common common-options
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-language:    Haskell2010

library
  import:              common-options
  build-depends:       base                   < 5
                     , binary                 < 0.10
                     , conduit                < 1.4
                     , directory              < 1.4
                     , filepath               < 1.5
                     , http-client            < 0.8
                     , http-client-tls        < 0.4
                     , http-reverse-proxy     < 0.7.0
                     , http-types             < 0.13
                     , relude                 > 1.0.0.0
                     , wai                    < 3.3
                     , warp                   < 3.4
  hs-source-dirs:      src
  exposed-modules:     CachingReverseProxy

executable caching-reverse-proxy
  import:              common-options
  build-depends:       caching-reverse-proxy
                     , optparse-generic       < 1.5
                     , relude                 > 1.0.0.0
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       caching-reverse-proxy
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
